# gage

./: Cargo.toml
src/: lib.rs
src/engine/: bus.rs  mod.rs  state.rs  types.rs
src/renderer/: mod.rs  static_model.rs
src/renderer/shaders/: static_model.wgsl
src/window/: mod.rs
